1S2024/Clase_10_11/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENTBLOCK
    NUMBER
    STRING
    TIPONUMBER

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr
Rule 5     instruccion -> declaracion_instr
Rule 6     instruccion -> asignacion_instr
Rule 7     instruccion -> if_instr
Rule 8     instruccion -> if_else_instr
Rule 9     instruccion -> while_instr
Rule 10    instruccion -> funcion_instr
Rule 11    instruccion -> call_funcion_instr
Rule 12    instruccion -> interface_instr
Rule 13    instruccion -> return_instr
Rule 14    instruccion -> break_instr
Rule 15    break_instr -> BREAK PUNTOCOMA
Rule 16    return_instr -> RETURN expresion PUNTOCOMA
Rule 17    return_instr -> RETURN PUNTOCOMA
Rule 18    interface_instr -> INTERFACE ID LLAVIZQ interface_params PUNTOCOMA LLAVDER
Rule 19    interface_params -> interface_params PUNTOCOMA ID DOSPUNTOS expresion
Rule 20    interface_params -> ID DOSPUNTOS expresion
Rule 21    imprimir_instr -> CONSOLE PUNTO LOG PARIZQ expresion PARDER PUNTOCOMA
Rule 22    declaracion_instr -> LET ID IGUAL expresion PUNTOCOMA
Rule 23    asignacion_instr -> ID IGUAL expresion PUNTOCOMA
Rule 24    if_instr -> IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
Rule 25    funcion_instr -> FUNCTION ID PARIZQ ID COMA ID PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
Rule 26    call_funcion_instr -> ID PARIZQ expresion COMA expresion PARDER PUNTOCOMA
Rule 27    if_else_instr -> IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER PUNTOCOMA
Rule 28    while_instr -> WHILE PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
Rule 29    expresion -> expresion MAS expresion
Rule 30    expresion -> expresion MENOS expresion
Rule 31    expresion -> expresion POR expresion
Rule 32    expresion -> expresion DIVIDIDO expresion
Rule 33    expresion -> expresion AND expresion
Rule 34    expresion -> expresion OR expresion
Rule 35    expresion -> expresion MAYQUE expresion
Rule 36    expresion -> expresion MENQUE expresion
Rule 37    expresion -> expresion IGUALQUE expresion
Rule 38    expresion -> expresion NIGUALQUE expresion
Rule 39    expresion -> expresion MENORIGUAL expresion
Rule 40    expresion -> MENOS expresion
Rule 41    expresion -> PARIZQ expresion PARDER
Rule 42    expresion -> ENTERO
Rule 43    expresion -> CADENA
Rule 44    expresion -> ID
Rule 45    expresion -> ID PUNTO ID
Rule 46    expresion -> ID PARIZQ expresion COMA expresion PARDER

Terminals, with rules where they appear

AND                  : 33
BREAK                : 15
CADENA               : 43
COMA                 : 25 26 46
COMMENTBLOCK         : 
CONSOLE              : 21
DIVIDIDO             : 32
DOSPUNTOS            : 19 20
ELSE                 : 27
ENTERO               : 42
FUNCTION             : 25
ID                   : 18 19 20 22 23 25 25 25 26 44 45 45 46
IF                   : 24 27
IGUAL                : 22 23
IGUALQUE             : 37
INTERFACE            : 18
LET                  : 22
LLAVDER              : 18 24 25 27 27 28
LLAVIZQ              : 18 24 25 27 27 28
LOG                  : 21
MAS                  : 29
MAYQUE               : 35
MENORIGUAL           : 39
MENOS                : 30 40
MENQUE               : 36
NIGUALQUE            : 38
NUMBER               : 
OR                   : 34
PARDER               : 21 24 25 26 27 28 41 46
PARIZQ               : 21 24 25 26 27 28 41 46
POR                  : 31
PUNTO                : 21 45
PUNTOCOMA            : 15 16 17 18 19 21 22 23 24 25 26 27 28
RETURN               : 16 17
STRING               : 
TIPONUMBER           : 
WHILE                : 28
error                : 

Nonterminals, with rules where they appear

asignacion_instr     : 6
break_instr          : 14
call_funcion_instr   : 11
declaracion_instr    : 5
expresion            : 16 19 20 21 22 23 24 26 26 27 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 41 46 46
funcion_instr        : 10
if_else_instr        : 8
if_instr             : 7
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 24 25 27 27 28
interface_instr      : 12
interface_params     : 18 19
return_instr         : 13
while_instr          : 9

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . declaracion_instr
    (6) instruccion -> . asignacion_instr
    (7) instruccion -> . if_instr
    (8) instruccion -> . if_else_instr
    (9) instruccion -> . while_instr
    (10) instruccion -> . funcion_instr
    (11) instruccion -> . call_funcion_instr
    (12) instruccion -> . interface_instr
    (13) instruccion -> . return_instr
    (14) instruccion -> . break_instr
    (21) imprimir_instr -> . CONSOLE PUNTO LOG PARIZQ expresion PARDER PUNTOCOMA
    (22) declaracion_instr -> . LET ID IGUAL expresion PUNTOCOMA
    (23) asignacion_instr -> . ID IGUAL expresion PUNTOCOMA
    (24) if_instr -> . IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (27) if_else_instr -> . IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (28) while_instr -> . WHILE PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (25) funcion_instr -> . FUNCTION ID PARIZQ ID COMA ID PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (26) call_funcion_instr -> . ID PARIZQ expresion COMA expresion PARDER PUNTOCOMA
    (18) interface_instr -> . INTERFACE ID LLAVIZQ interface_params PUNTOCOMA LLAVDER
    (16) return_instr -> . RETURN expresion PUNTOCOMA
    (17) return_instr -> . RETURN PUNTOCOMA
    (15) break_instr -> . BREAK PUNTOCOMA

    CONSOLE         shift and go to state 15
    LET             shift and go to state 16
    ID              shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    FUNCTION        shift and go to state 20
    INTERFACE       shift and go to state 21
    RETURN          shift and go to state 22
    BREAK           shift and go to state 23

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    asignacion_instr               shift and go to state 6
    if_instr                       shift and go to state 7
    if_else_instr                  shift and go to state 8
    while_instr                    shift and go to state 9
    funcion_instr                  shift and go to state 10
    call_funcion_instr             shift and go to state 11
    interface_instr                shift and go to state 12
    return_instr                   shift and go to state 13
    break_instr                    shift and go to state 14

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . declaracion_instr
    (6) instruccion -> . asignacion_instr
    (7) instruccion -> . if_instr
    (8) instruccion -> . if_else_instr
    (9) instruccion -> . while_instr
    (10) instruccion -> . funcion_instr
    (11) instruccion -> . call_funcion_instr
    (12) instruccion -> . interface_instr
    (13) instruccion -> . return_instr
    (14) instruccion -> . break_instr
    (21) imprimir_instr -> . CONSOLE PUNTO LOG PARIZQ expresion PARDER PUNTOCOMA
    (22) declaracion_instr -> . LET ID IGUAL expresion PUNTOCOMA
    (23) asignacion_instr -> . ID IGUAL expresion PUNTOCOMA
    (24) if_instr -> . IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (27) if_else_instr -> . IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (28) while_instr -> . WHILE PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (25) funcion_instr -> . FUNCTION ID PARIZQ ID COMA ID PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (26) call_funcion_instr -> . ID PARIZQ expresion COMA expresion PARDER PUNTOCOMA
    (18) interface_instr -> . INTERFACE ID LLAVIZQ interface_params PUNTOCOMA LLAVDER
    (16) return_instr -> . RETURN expresion PUNTOCOMA
    (17) return_instr -> . RETURN PUNTOCOMA
    (15) break_instr -> . BREAK PUNTOCOMA

    $end            reduce using rule 1 (init -> instrucciones .)
    CONSOLE         shift and go to state 15
    LET             shift and go to state 16
    ID              shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    FUNCTION        shift and go to state 20
    INTERFACE       shift and go to state 21
    RETURN          shift and go to state 22
    BREAK           shift and go to state 23

    instruccion                    shift and go to state 24
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    asignacion_instr               shift and go to state 6
    if_instr                       shift and go to state 7
    if_else_instr                  shift and go to state 8
    while_instr                    shift and go to state 9
    funcion_instr                  shift and go to state 10
    call_funcion_instr             shift and go to state 11
    interface_instr                shift and go to state 12
    return_instr                   shift and go to state 13
    break_instr                    shift and go to state 14

state 3

    (3) instrucciones -> instruccion .

    CONSOLE         reduce using rule 3 (instrucciones -> instruccion .)
    LET             reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 3 (instrucciones -> instruccion .)
    INTERFACE       reduce using rule 3 (instrucciones -> instruccion .)
    RETURN          reduce using rule 3 (instrucciones -> instruccion .)
    BREAK           reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVDER         reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr .

    CONSOLE         reduce using rule 4 (instruccion -> imprimir_instr .)
    LET             reduce using rule 4 (instruccion -> imprimir_instr .)
    ID              reduce using rule 4 (instruccion -> imprimir_instr .)
    IF              reduce using rule 4 (instruccion -> imprimir_instr .)
    WHILE           reduce using rule 4 (instruccion -> imprimir_instr .)
    FUNCTION        reduce using rule 4 (instruccion -> imprimir_instr .)
    INTERFACE       reduce using rule 4 (instruccion -> imprimir_instr .)
    RETURN          reduce using rule 4 (instruccion -> imprimir_instr .)
    BREAK           reduce using rule 4 (instruccion -> imprimir_instr .)
    $end            reduce using rule 4 (instruccion -> imprimir_instr .)
    LLAVDER         reduce using rule 4 (instruccion -> imprimir_instr .)


state 5

    (5) instruccion -> declaracion_instr .

    CONSOLE         reduce using rule 5 (instruccion -> declaracion_instr .)
    LET             reduce using rule 5 (instruccion -> declaracion_instr .)
    ID              reduce using rule 5 (instruccion -> declaracion_instr .)
    IF              reduce using rule 5 (instruccion -> declaracion_instr .)
    WHILE           reduce using rule 5 (instruccion -> declaracion_instr .)
    FUNCTION        reduce using rule 5 (instruccion -> declaracion_instr .)
    INTERFACE       reduce using rule 5 (instruccion -> declaracion_instr .)
    RETURN          reduce using rule 5 (instruccion -> declaracion_instr .)
    BREAK           reduce using rule 5 (instruccion -> declaracion_instr .)
    $end            reduce using rule 5 (instruccion -> declaracion_instr .)
    LLAVDER         reduce using rule 5 (instruccion -> declaracion_instr .)


state 6

    (6) instruccion -> asignacion_instr .

    CONSOLE         reduce using rule 6 (instruccion -> asignacion_instr .)
    LET             reduce using rule 6 (instruccion -> asignacion_instr .)
    ID              reduce using rule 6 (instruccion -> asignacion_instr .)
    IF              reduce using rule 6 (instruccion -> asignacion_instr .)
    WHILE           reduce using rule 6 (instruccion -> asignacion_instr .)
    FUNCTION        reduce using rule 6 (instruccion -> asignacion_instr .)
    INTERFACE       reduce using rule 6 (instruccion -> asignacion_instr .)
    RETURN          reduce using rule 6 (instruccion -> asignacion_instr .)
    BREAK           reduce using rule 6 (instruccion -> asignacion_instr .)
    $end            reduce using rule 6 (instruccion -> asignacion_instr .)
    LLAVDER         reduce using rule 6 (instruccion -> asignacion_instr .)


state 7

    (7) instruccion -> if_instr .

    CONSOLE         reduce using rule 7 (instruccion -> if_instr .)
    LET             reduce using rule 7 (instruccion -> if_instr .)
    ID              reduce using rule 7 (instruccion -> if_instr .)
    IF              reduce using rule 7 (instruccion -> if_instr .)
    WHILE           reduce using rule 7 (instruccion -> if_instr .)
    FUNCTION        reduce using rule 7 (instruccion -> if_instr .)
    INTERFACE       reduce using rule 7 (instruccion -> if_instr .)
    RETURN          reduce using rule 7 (instruccion -> if_instr .)
    BREAK           reduce using rule 7 (instruccion -> if_instr .)
    $end            reduce using rule 7 (instruccion -> if_instr .)
    LLAVDER         reduce using rule 7 (instruccion -> if_instr .)


state 8

    (8) instruccion -> if_else_instr .

    CONSOLE         reduce using rule 8 (instruccion -> if_else_instr .)
    LET             reduce using rule 8 (instruccion -> if_else_instr .)
    ID              reduce using rule 8 (instruccion -> if_else_instr .)
    IF              reduce using rule 8 (instruccion -> if_else_instr .)
    WHILE           reduce using rule 8 (instruccion -> if_else_instr .)
    FUNCTION        reduce using rule 8 (instruccion -> if_else_instr .)
    INTERFACE       reduce using rule 8 (instruccion -> if_else_instr .)
    RETURN          reduce using rule 8 (instruccion -> if_else_instr .)
    BREAK           reduce using rule 8 (instruccion -> if_else_instr .)
    $end            reduce using rule 8 (instruccion -> if_else_instr .)
    LLAVDER         reduce using rule 8 (instruccion -> if_else_instr .)


state 9

    (9) instruccion -> while_instr .

    CONSOLE         reduce using rule 9 (instruccion -> while_instr .)
    LET             reduce using rule 9 (instruccion -> while_instr .)
    ID              reduce using rule 9 (instruccion -> while_instr .)
    IF              reduce using rule 9 (instruccion -> while_instr .)
    WHILE           reduce using rule 9 (instruccion -> while_instr .)
    FUNCTION        reduce using rule 9 (instruccion -> while_instr .)
    INTERFACE       reduce using rule 9 (instruccion -> while_instr .)
    RETURN          reduce using rule 9 (instruccion -> while_instr .)
    BREAK           reduce using rule 9 (instruccion -> while_instr .)
    $end            reduce using rule 9 (instruccion -> while_instr .)
    LLAVDER         reduce using rule 9 (instruccion -> while_instr .)


state 10

    (10) instruccion -> funcion_instr .

    CONSOLE         reduce using rule 10 (instruccion -> funcion_instr .)
    LET             reduce using rule 10 (instruccion -> funcion_instr .)
    ID              reduce using rule 10 (instruccion -> funcion_instr .)
    IF              reduce using rule 10 (instruccion -> funcion_instr .)
    WHILE           reduce using rule 10 (instruccion -> funcion_instr .)
    FUNCTION        reduce using rule 10 (instruccion -> funcion_instr .)
    INTERFACE       reduce using rule 10 (instruccion -> funcion_instr .)
    RETURN          reduce using rule 10 (instruccion -> funcion_instr .)
    BREAK           reduce using rule 10 (instruccion -> funcion_instr .)
    $end            reduce using rule 10 (instruccion -> funcion_instr .)
    LLAVDER         reduce using rule 10 (instruccion -> funcion_instr .)


state 11

    (11) instruccion -> call_funcion_instr .

    CONSOLE         reduce using rule 11 (instruccion -> call_funcion_instr .)
    LET             reduce using rule 11 (instruccion -> call_funcion_instr .)
    ID              reduce using rule 11 (instruccion -> call_funcion_instr .)
    IF              reduce using rule 11 (instruccion -> call_funcion_instr .)
    WHILE           reduce using rule 11 (instruccion -> call_funcion_instr .)
    FUNCTION        reduce using rule 11 (instruccion -> call_funcion_instr .)
    INTERFACE       reduce using rule 11 (instruccion -> call_funcion_instr .)
    RETURN          reduce using rule 11 (instruccion -> call_funcion_instr .)
    BREAK           reduce using rule 11 (instruccion -> call_funcion_instr .)
    $end            reduce using rule 11 (instruccion -> call_funcion_instr .)
    LLAVDER         reduce using rule 11 (instruccion -> call_funcion_instr .)


state 12

    (12) instruccion -> interface_instr .

    CONSOLE         reduce using rule 12 (instruccion -> interface_instr .)
    LET             reduce using rule 12 (instruccion -> interface_instr .)
    ID              reduce using rule 12 (instruccion -> interface_instr .)
    IF              reduce using rule 12 (instruccion -> interface_instr .)
    WHILE           reduce using rule 12 (instruccion -> interface_instr .)
    FUNCTION        reduce using rule 12 (instruccion -> interface_instr .)
    INTERFACE       reduce using rule 12 (instruccion -> interface_instr .)
    RETURN          reduce using rule 12 (instruccion -> interface_instr .)
    BREAK           reduce using rule 12 (instruccion -> interface_instr .)
    $end            reduce using rule 12 (instruccion -> interface_instr .)
    LLAVDER         reduce using rule 12 (instruccion -> interface_instr .)


state 13

    (13) instruccion -> return_instr .

    CONSOLE         reduce using rule 13 (instruccion -> return_instr .)
    LET             reduce using rule 13 (instruccion -> return_instr .)
    ID              reduce using rule 13 (instruccion -> return_instr .)
    IF              reduce using rule 13 (instruccion -> return_instr .)
    WHILE           reduce using rule 13 (instruccion -> return_instr .)
    FUNCTION        reduce using rule 13 (instruccion -> return_instr .)
    INTERFACE       reduce using rule 13 (instruccion -> return_instr .)
    RETURN          reduce using rule 13 (instruccion -> return_instr .)
    BREAK           reduce using rule 13 (instruccion -> return_instr .)
    $end            reduce using rule 13 (instruccion -> return_instr .)
    LLAVDER         reduce using rule 13 (instruccion -> return_instr .)


state 14

    (14) instruccion -> break_instr .

    CONSOLE         reduce using rule 14 (instruccion -> break_instr .)
    LET             reduce using rule 14 (instruccion -> break_instr .)
    ID              reduce using rule 14 (instruccion -> break_instr .)
    IF              reduce using rule 14 (instruccion -> break_instr .)
    WHILE           reduce using rule 14 (instruccion -> break_instr .)
    FUNCTION        reduce using rule 14 (instruccion -> break_instr .)
    INTERFACE       reduce using rule 14 (instruccion -> break_instr .)
    RETURN          reduce using rule 14 (instruccion -> break_instr .)
    BREAK           reduce using rule 14 (instruccion -> break_instr .)
    $end            reduce using rule 14 (instruccion -> break_instr .)
    LLAVDER         reduce using rule 14 (instruccion -> break_instr .)


state 15

    (21) imprimir_instr -> CONSOLE . PUNTO LOG PARIZQ expresion PARDER PUNTOCOMA

    PUNTO           shift and go to state 25


state 16

    (22) declaracion_instr -> LET . ID IGUAL expresion PUNTOCOMA

    ID              shift and go to state 26


state 17

    (23) asignacion_instr -> ID . IGUAL expresion PUNTOCOMA
    (26) call_funcion_instr -> ID . PARIZQ expresion COMA expresion PARDER PUNTOCOMA

    IGUAL           shift and go to state 27
    PARIZQ          shift and go to state 28


state 18

    (24) if_instr -> IF . PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (27) if_else_instr -> IF . PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER PUNTOCOMA

    PARIZQ          shift and go to state 29


state 19

    (28) while_instr -> WHILE . PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA

    PARIZQ          shift and go to state 30


state 20

    (25) funcion_instr -> FUNCTION . ID PARIZQ ID COMA ID PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA

    ID              shift and go to state 31


state 21

    (18) interface_instr -> INTERFACE . ID LLAVIZQ interface_params PUNTOCOMA LLAVDER

    ID              shift and go to state 32


state 22

    (16) return_instr -> RETURN . expresion PUNTOCOMA
    (17) return_instr -> RETURN . PUNTOCOMA
    (29) expresion -> . expresion MAS expresion
    (30) expresion -> . expresion MENOS expresion
    (31) expresion -> . expresion POR expresion
    (32) expresion -> . expresion DIVIDIDO expresion
    (33) expresion -> . expresion AND expresion
    (34) expresion -> . expresion OR expresion
    (35) expresion -> . expresion MAYQUE expresion
    (36) expresion -> . expresion MENQUE expresion
    (37) expresion -> . expresion IGUALQUE expresion
    (38) expresion -> . expresion NIGUALQUE expresion
    (39) expresion -> . expresion MENORIGUAL expresion
    (40) expresion -> . MENOS expresion
    (41) expresion -> . PARIZQ expresion PARDER
    (42) expresion -> . ENTERO
    (43) expresion -> . CADENA
    (44) expresion -> . ID
    (45) expresion -> . ID PUNTO ID
    (46) expresion -> . ID PARIZQ expresion COMA expresion PARDER

    PUNTOCOMA       shift and go to state 34
    MENOS           shift and go to state 35
    PARIZQ          shift and go to state 36
    ENTERO          shift and go to state 37
    CADENA          shift and go to state 38
    ID              shift and go to state 39

    expresion                      shift and go to state 33

state 23

    (15) break_instr -> BREAK . PUNTOCOMA

    PUNTOCOMA       shift and go to state 40


state 24

    (2) instrucciones -> instrucciones instruccion .

    CONSOLE         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LET             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    IF              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    WHILE           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    FUNCTION        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    INTERFACE       reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RETURN          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    BREAK           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVDER         reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 25

    (21) imprimir_instr -> CONSOLE PUNTO . LOG PARIZQ expresion PARDER PUNTOCOMA

    LOG             shift and go to state 41


state 26

    (22) declaracion_instr -> LET ID . IGUAL expresion PUNTOCOMA

    IGUAL           shift and go to state 42


state 27

    (23) asignacion_instr -> ID IGUAL . expresion PUNTOCOMA
    (29) expresion -> . expresion MAS expresion
    (30) expresion -> . expresion MENOS expresion
    (31) expresion -> . expresion POR expresion
    (32) expresion -> . expresion DIVIDIDO expresion
    (33) expresion -> . expresion AND expresion
    (34) expresion -> . expresion OR expresion
    (35) expresion -> . expresion MAYQUE expresion
    (36) expresion -> . expresion MENQUE expresion
    (37) expresion -> . expresion IGUALQUE expresion
    (38) expresion -> . expresion NIGUALQUE expresion
    (39) expresion -> . expresion MENORIGUAL expresion
    (40) expresion -> . MENOS expresion
    (41) expresion -> . PARIZQ expresion PARDER
    (42) expresion -> . ENTERO
    (43) expresion -> . CADENA
    (44) expresion -> . ID
    (45) expresion -> . ID PUNTO ID
    (46) expresion -> . ID PARIZQ expresion COMA expresion PARDER

    MENOS           shift and go to state 35
    PARIZQ          shift and go to state 36
    ENTERO          shift and go to state 37
    CADENA          shift and go to state 38
    ID              shift and go to state 39

    expresion                      shift and go to state 43

state 28

    (26) call_funcion_instr -> ID PARIZQ . expresion COMA expresion PARDER PUNTOCOMA
    (29) expresion -> . expresion MAS expresion
    (30) expresion -> . expresion MENOS expresion
    (31) expresion -> . expresion POR expresion
    (32) expresion -> . expresion DIVIDIDO expresion
    (33) expresion -> . expresion AND expresion
    (34) expresion -> . expresion OR expresion
    (35) expresion -> . expresion MAYQUE expresion
    (36) expresion -> . expresion MENQUE expresion
    (37) expresion -> . expresion IGUALQUE expresion
    (38) expresion -> . expresion NIGUALQUE expresion
    (39) expresion -> . expresion MENORIGUAL expresion
    (40) expresion -> . MENOS expresion
    (41) expresion -> . PARIZQ expresion PARDER
    (42) expresion -> . ENTERO
    (43) expresion -> . CADENA
    (44) expresion -> . ID
    (45) expresion -> . ID PUNTO ID
    (46) expresion -> . ID PARIZQ expresion COMA expresion PARDER

    MENOS           shift and go to state 35
    PARIZQ          shift and go to state 36
    ENTERO          shift and go to state 37
    CADENA          shift and go to state 38
    ID              shift and go to state 39

    expresion                      shift and go to state 44

state 29

    (24) if_instr -> IF PARIZQ . expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (27) if_else_instr -> IF PARIZQ . expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (29) expresion -> . expresion MAS expresion
    (30) expresion -> . expresion MENOS expresion
    (31) expresion -> . expresion POR expresion
    (32) expresion -> . expresion DIVIDIDO expresion
    (33) expresion -> . expresion AND expresion
    (34) expresion -> . expresion OR expresion
    (35) expresion -> . expresion MAYQUE expresion
    (36) expresion -> . expresion MENQUE expresion
    (37) expresion -> . expresion IGUALQUE expresion
    (38) expresion -> . expresion NIGUALQUE expresion
    (39) expresion -> . expresion MENORIGUAL expresion
    (40) expresion -> . MENOS expresion
    (41) expresion -> . PARIZQ expresion PARDER
    (42) expresion -> . ENTERO
    (43) expresion -> . CADENA
    (44) expresion -> . ID
    (45) expresion -> . ID PUNTO ID
    (46) expresion -> . ID PARIZQ expresion COMA expresion PARDER

    MENOS           shift and go to state 35
    PARIZQ          shift and go to state 36
    ENTERO          shift and go to state 37
    CADENA          shift and go to state 38
    ID              shift and go to state 39

    expresion                      shift and go to state 45

state 30

    (28) while_instr -> WHILE PARIZQ . expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (29) expresion -> . expresion MAS expresion
    (30) expresion -> . expresion MENOS expresion
    (31) expresion -> . expresion POR expresion
    (32) expresion -> . expresion DIVIDIDO expresion
    (33) expresion -> . expresion AND expresion
    (34) expresion -> . expresion OR expresion
    (35) expresion -> . expresion MAYQUE expresion
    (36) expresion -> . expresion MENQUE expresion
    (37) expresion -> . expresion IGUALQUE expresion
    (38) expresion -> . expresion NIGUALQUE expresion
    (39) expresion -> . expresion MENORIGUAL expresion
    (40) expresion -> . MENOS expresion
    (41) expresion -> . PARIZQ expresion PARDER
    (42) expresion -> . ENTERO
    (43) expresion -> . CADENA
    (44) expresion -> . ID
    (45) expresion -> . ID PUNTO ID
    (46) expresion -> . ID PARIZQ expresion COMA expresion PARDER

    MENOS           shift and go to state 35
    PARIZQ          shift and go to state 36
    ENTERO          shift and go to state 37
    CADENA          shift and go to state 38
    ID              shift and go to state 39

    expresion                      shift and go to state 46

state 31

    (25) funcion_instr -> FUNCTION ID . PARIZQ ID COMA ID PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA

    PARIZQ          shift and go to state 47


state 32

    (18) interface_instr -> INTERFACE ID . LLAVIZQ interface_params PUNTOCOMA LLAVDER

    LLAVIZQ         shift and go to state 48


state 33

    (16) return_instr -> RETURN expresion . PUNTOCOMA
    (29) expresion -> expresion . MAS expresion
    (30) expresion -> expresion . MENOS expresion
    (31) expresion -> expresion . POR expresion
    (32) expresion -> expresion . DIVIDIDO expresion
    (33) expresion -> expresion . AND expresion
    (34) expresion -> expresion . OR expresion
    (35) expresion -> expresion . MAYQUE expresion
    (36) expresion -> expresion . MENQUE expresion
    (37) expresion -> expresion . IGUALQUE expresion
    (38) expresion -> expresion . NIGUALQUE expresion
    (39) expresion -> expresion . MENORIGUAL expresion

    PUNTOCOMA       shift and go to state 49
    MAS             shift and go to state 50
    MENOS           shift and go to state 51
    POR             shift and go to state 52
    DIVIDIDO        shift and go to state 53
    AND             shift and go to state 54
    OR              shift and go to state 55
    MAYQUE          shift and go to state 56
    MENQUE          shift and go to state 57
    IGUALQUE        shift and go to state 58
    NIGUALQUE       shift and go to state 59
    MENORIGUAL      shift and go to state 60


state 34

    (17) return_instr -> RETURN PUNTOCOMA .

    CONSOLE         reduce using rule 17 (return_instr -> RETURN PUNTOCOMA .)
    LET             reduce using rule 17 (return_instr -> RETURN PUNTOCOMA .)
    ID              reduce using rule 17 (return_instr -> RETURN PUNTOCOMA .)
    IF              reduce using rule 17 (return_instr -> RETURN PUNTOCOMA .)
    WHILE           reduce using rule 17 (return_instr -> RETURN PUNTOCOMA .)
    FUNCTION        reduce using rule 17 (return_instr -> RETURN PUNTOCOMA .)
    INTERFACE       reduce using rule 17 (return_instr -> RETURN PUNTOCOMA .)
    RETURN          reduce using rule 17 (return_instr -> RETURN PUNTOCOMA .)
    BREAK           reduce using rule 17 (return_instr -> RETURN PUNTOCOMA .)
    $end            reduce using rule 17 (return_instr -> RETURN PUNTOCOMA .)
    LLAVDER         reduce using rule 17 (return_instr -> RETURN PUNTOCOMA .)


state 35

    (40) expresion -> MENOS . expresion
    (29) expresion -> . expresion MAS expresion
    (30) expresion -> . expresion MENOS expresion
    (31) expresion -> . expresion POR expresion
    (32) expresion -> . expresion DIVIDIDO expresion
    (33) expresion -> . expresion AND expresion
    (34) expresion -> . expresion OR expresion
    (35) expresion -> . expresion MAYQUE expresion
    (36) expresion -> . expresion MENQUE expresion
    (37) expresion -> . expresion IGUALQUE expresion
    (38) expresion -> . expresion NIGUALQUE expresion
    (39) expresion -> . expresion MENORIGUAL expresion
    (40) expresion -> . MENOS expresion
    (41) expresion -> . PARIZQ expresion PARDER
    (42) expresion -> . ENTERO
    (43) expresion -> . CADENA
    (44) expresion -> . ID
    (45) expresion -> . ID PUNTO ID
    (46) expresion -> . ID PARIZQ expresion COMA expresion PARDER

    MENOS           shift and go to state 35
    PARIZQ          shift and go to state 36
    ENTERO          shift and go to state 37
    CADENA          shift and go to state 38
    ID              shift and go to state 39

    expresion                      shift and go to state 61

state 36

    (41) expresion -> PARIZQ . expresion PARDER
    (29) expresion -> . expresion MAS expresion
    (30) expresion -> . expresion MENOS expresion
    (31) expresion -> . expresion POR expresion
    (32) expresion -> . expresion DIVIDIDO expresion
    (33) expresion -> . expresion AND expresion
    (34) expresion -> . expresion OR expresion
    (35) expresion -> . expresion MAYQUE expresion
    (36) expresion -> . expresion MENQUE expresion
    (37) expresion -> . expresion IGUALQUE expresion
    (38) expresion -> . expresion NIGUALQUE expresion
    (39) expresion -> . expresion MENORIGUAL expresion
    (40) expresion -> . MENOS expresion
    (41) expresion -> . PARIZQ expresion PARDER
    (42) expresion -> . ENTERO
    (43) expresion -> . CADENA
    (44) expresion -> . ID
    (45) expresion -> . ID PUNTO ID
    (46) expresion -> . ID PARIZQ expresion COMA expresion PARDER
